--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google-cloud/text-to-speech": "^6.1.0",
     "@vitalets/google-translate-api": "^9.2.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
