--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "genai-phone",
   "version": "1.1.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "inbound": "node ./scripts/inbound-call.js",
@@ -14,21 +15,22 @@
   "author": "Charlie Weems",
   "license": "MIT",
   "dependencies": {
-    "@deepgram/sdk": "^3.3.4",
+    "@deepgram/sdk": "^3.13.0",
     "@google-cloud/text-to-speech": "^6.1.0",
     "@vitalets/google-translate-api": "^9.2.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "google-translate-api-x": "^10.7.2",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.20.1",
     "twilio": "^4.19.3",
     "uuid": "^9.0.1",
+    "wav-decoder": "^1.3.0",
     "wavefile": "^11.0.0"
   },
   "devDependencies": {
